--- a/branches/damagecontrol_active_record/public/stylesheets/style.css
+++ b/branches/damagecontrol_active_record/public/stylesheets/style.css
@@ -171,12 +171,12 @@ dd {
 
 /* Apply icon background-image twice to avoid hover-flicker in IE/Win */
 dt.requested_build, dt.requested_build a { background-image: url(/images/build/grey-16.gif) !important }
-dt.synching_working_copy_build, dt.synching_working_copy_build a { background-image: url(/images/build/grey-16.gif) !important }
-dt.executing_build, dt.executing_build a { background-image: url(/images/build/grey-16.gif) !important }
-dt.successful_build, dt.successful_build a { background-image: url(/images/build/grey-16.gif) !important }
-dt.fixed_build, dt.fixed_build a { background-image: url(/images/build/grey-16.gif) !important }
-dt.broken_build, dt.broken_build a { background-image: url(/images/build/grey-16.gif) !important }
-dt.repeatedly_broken_build, dt.repeatedly_broken_build a { background-image: url(/images/build/grey-16.gif) !important }
+dt.synching_working_copy_build, dt.synching_working_copy_build a { background-image: url(/images/build/blue-16.gif) !important }
+dt.executing_build, dt.executing_build a { background-image: url(/images/build/spinner.gif) !important }
+dt.successful_build, dt.successful_build a { background-image: url(/images/build/green-16.gif) !important }
+dt.fixed_build, dt.fixed_build a { background-image: url(/images/build/green-16.gif) !important }
+dt.broken_build, dt.broken_build a { background-image: url(/images/build/red-16.gif) !important }
+dt.repeatedly_broken_build, dt.repeatedly_broken_build a { background-image: url(/images/build/red-pulse-16.gif) !important }
 
 dt.revision, dt.revision a { background-image: url(/images/revision/documents.png) !important }
 dt.added_file, dt.added_file a { background-image: url(/images/revision/document_add.png) !important }
