--- a/branches/damagecontrol_active_record/app/views/plugin/damage_control/publisher/ambient_orb/_build_state.rhtml
+++ b/branches/damagecontrol_active_record/app/views/plugin/damage_control/publisher/ambient_orb/_build_state.rhtml
@@ -1,6 +1,6 @@
 <select name="publisher[DamageControl::Publisher::AmbientOrb][color][<%= build_state.name %>]">
-  <%= options_for_select(Ambient::Orb.colors, object.color ? object.color[build_state.name] : nil) %>
+  <%= options_for_select(Ambient::Orb.colors, plugin.color ? plugin.color[build_state.name] : nil) %>
 </select>
 <select name="publisher[DamageControl::Publisher::AmbientOrb][animation][<%= build_state.name %>]">
-  <%= options_for_select(Ambient::Orb.animations, object.animation ? object.animation[build_state.name] : nil) %>
+  <%= options_for_select(Ambient::Orb.animations, plugin.animation ? plugin.animation[build_state.name] : nil) %>
 </select>
