--- a/branches/damagecontrol_active_record/app/views/plugin/meta_project/scm_web/browser/_form.rhtml
+++ b/branches/damagecontrol_active_record/app/views/plugin/meta_project/scm_web/browser/_form.rhtml
@@ -3,31 +3,31 @@
   <tr>
     <td>Directory:</td>
     <td>
-      <input name="scm_web[dir_spec]" value="<%= CGI.escapeHTML(object.dir_spec) %>"/>
+      <input name="scm_web[dir_spec]" value="<%= CGI.escapeHTML(plugin.dir_spec) %>"/>
     </td>
   </tr>
   <tr>
     <td>History:</td>
     <td>
-      <input name="scm_web[history_spec]" value="<%= CGI.escapeHTML(object.history_spec) %>"/>
+      <input name="scm_web[history_spec]" value="<%= CGI.escapeHTML(plugin.history_spec) %>"/>
     </td>
   </tr>
   <tr>
     <td>Raw:</td>
     <td>
-      <input name="scm_web[raw_spec]" value="<%= CGI.escapeHTML(object.raw_spec) %>"/>
+      <input name="scm_web[raw_spec]" value="<%= CGI.escapeHTML(plugin.raw_spec) %>"/>
     </td>
   </tr>
   <tr>
     <td>HTML:</td>
     <td>
-      <input name="scm_web[html_spec]" value="<%= CGI.escapeHTML(object.html_spec) %>"/>
+      <input name="scm_web[html_spec]" value="<%= CGI.escapeHTML(plugin.html_spec) %>"/>
     </td>
   </tr>
   <tr>
     <td>Diff:</td>
     <td>
-      <input name="scm_web[diff_spec]" value="<%= CGI.escapeHTML(object.diff_spec) %>"/>
+      <input name="scm_web[diff_spec]" value="<%= CGI.escapeHTML(plugin.diff_spec) %>"/>
     </td>
   </tr>
 </table>
