--- a/app/views/project/_summary.rhtml
+++ b/app/views/project/_summary.rhtml
@@ -4,8 +4,8 @@
 </h2>
 
 <% if project.latest_build %>
-  <%= build_inline_link(project.latest_build) %>
+  <%= build_link(project.latest_build) %>
 <% end %>
 <% if(project.latest_revision) %>
-  <%= revision_inline_link(project.latest_revision) %>
+  <%= revision_link(project.latest_revision) %>
 <% end %>
