--- a/branches/damagecontrol_active_record/app/views/doc/sidebar.rhtml
+++ b/branches/damagecontrol_active_record/app/views/doc/sidebar.rhtml
@@ -14,7 +14,7 @@
 <%= link_to "Installation", :action => "installation" %><br/>
 <%= link_to "Issue tracker integration", :action => "issue_tracker_integration" %><br/>
 <%= link_to "Logs", :action => "logs" %><br/>
-<%= link_to "Platforms", :action => "platform" %><br/>
+<%= link_to "RSCM::Platforms", :action => "platform" %><br/>
 <%= link_to "Plugins", :action => "plugin" %><br/>
 <%= link_to "Projects", :action => "project" %><br/>
 <%= link_to "Project Dependencies", :action => "project_dependencies" %><br/>
