--- a/branches/damagecontrol_active_record/app/views/project/timeline.rhtml
+++ b/branches/damagecontrol_active_record/app/views/project/timeline.rhtml
@@ -3,6 +3,8 @@
 <div class="project-menu">
   <%= link_to "Edit settings", :action => "edit", :id => @project.id %>
 | <%= link_to "RSS", :controller => "project", :action => "rss", :id => @project.id %>
+| <%= link_to "SCM stdout", :controller => "project", :action => "scm_stdout", :id => @project.id %>
+| <%= link_to "SCM stderr", :controller => "project", :action => "scm_stderr", :id => @project.id %>
 </div>
 
 <div class="overview-header">
@@ -13,9 +15,9 @@
     <% end; last_date = date %>
 
     <% revision.builds.reverse.each do |build| %>
-      <%= build_inline_link(build) %>
+      <%= build_link(build) %>
     <% end %>
 
-    <%= revision_inline_link(revision) %>
+    <%= revision_link(revision) %>
   <% end %>
 </div>
