--- a/branches/damagecontrol_active_record/app/views/plugin/damage_control/publisher/x10_cm17_a/_build_state.rhtml
+++ b/branches/damagecontrol_active_record/app/views/plugin/damage_control/publisher/x10_cm17_a/_build_state.rhtml
@@ -1,1 +1,3 @@
-<input name="publisher[<%= plugin.class.name %>][device][<%= build_state.name %>]" value="<%= plugin.device ? plugin.device[build_state.name] : nil %>">
+<td>
+  <input name="publisher[<%= plugin.class.name %>][device][<%= build_state.name %>]" value="<%= plugin.device ? plugin.device[build_state.name] : nil %>" />
+</td>
