--- a/branches/damagecontrol_active_record/app/views/revision/show.rhtml
+++ b/branches/damagecontrol_active_record/app/views/revision/show.rhtml
@@ -10,5 +10,7 @@
   ) %>
 </div>
 
+<table>
 <%= render :partial => "scm_file/header" %>
 <%= render :partial => "scm_file/overview", :collection => @scm_files %>
+</table>
