--- a/branches/damagecontrol_active_record/app/views/scm_file/_header.rhtml
+++ b/branches/damagecontrol_active_record/app/views/scm_file/_header.rhtml
@@ -1,3 +1,3 @@
-<div>
-  <span>Revision</span><span>Diff</span><span>History</span>
-</div>
+<tr>
+  <th>Diff</th><th>Rev</th><th>History</th>
+</tr>
